# rust_tmdb

./: .env  Cargo.toml  movie_list.txt
src/: database_functions.rs  download_image.rs  get_images.rs  image.txt  main.rs  search_movie.rs  search_movie_structs.rs  structs.rs
src/database_functions/: execute_query_without_return.rs  mod.rs
src/genre/: genre_structs.rs  mod.rs
src/get_movie_details/: get_movie.rs  get_movie_structs.rs
src/image/: image_structs.rs  mod.rs
src/movie_credist/: movie_credits.rs  movie_credits_structs.rs
src/movie_credits/: mod.rs  movie_credits.rs  movie_credits_structs.rs
src/movie_detail/: get_movie.rs  get_movie_structs.rs
src/movie_image/: image_structs.rs  images.rs  mod.rs
src/movie_movie_id/: get_movie.rs  get_movie_structs.rs  mod.rs
src/people/: get_cast.rs  mod.rs  people_structs.rs
src/tmdb_sql/: cast_person.sql  genre.sql  image.sql  movie.sql  movie_cast.sql  movie_genre.sql
