[package]
name = "rust_tmdb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.3"
futures = "0.3" # for our async / await blocks
serde_json = "1.0"
termion = "1.5.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
dotenv = "0.15.0"
